[gd_scene load_steps=14 format=3 uid="uid://cmvn2ddgocgqr"]

[ext_resource type="Script" path="res://Demo Scenes/hud.gd" id="1_ok176"]
[ext_resource type="Texture2D" uid="uid://dxrj652op1w55" path="res://Assets/Items/coin_1.png" id="2_ot836"]
[ext_resource type="Texture2D" uid="uid://b7cdhxlns1v22" path="res://Assets/Background/blue_grass.png" id="3_e1adr"]
[ext_resource type="FontFile" uid="uid://ybwy76ov0580" path="res://Assets/Fonts/font_default.ttf" id="3_i1cj0"]
[ext_resource type="PackedScene" path="res://Demo Scenes/demo_player.tscn" id="4_gvo2c"]
[ext_resource type="PackedScene" uid="uid://dpue732iu7jd7" path="res://Demo Scenes/demo_coin.tscn" id="5_i3o0q"]
[ext_resource type="PackedScene" uid="uid://copc2an7m7v1x" path="res://Demo Scenes/demo_enemy.tscn" id="6_sh5v0"]
[ext_resource type="TileSet" uid="uid://boc50hqqsnr5q" path="res://Demo Scenes/grass_tiles.tres" id="7_twyra"]
[ext_resource type="AudioStream" uid="uid://dkbntod711w5o" path="res://Assets/Audio/bgm_Alpha_Dance.ogg" id="17_djalf"]

[sub_resource type="LabelSettings" id="LabelSettings_aixse"]
font = ExtResource("3_i1cj0")
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_7w7or"]
font_size = 120

[sub_resource type="LabelSettings" id="LabelSettings_ojw47"]
font_size = 40

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aye17"]
size = Vector2(768, 192)

[node name="DemoLevel" type="Node2D"]
script = ExtResource("1_ok176")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="CoinUI" type="Node2D" parent="HUD"]

[node name="Panel" type="Panel" parent="HUD/CoinUI"]
offset_left = 24.0
offset_top = 24.0
offset_right = 200.0
offset_bottom = 104.0

[node name="TextureRect" type="TextureRect" parent="HUD/CoinUI"]
offset_left = 40.0
offset_top = 32.0
offset_right = 104.0
offset_bottom = 96.0
texture = ExtResource("2_ot836")
expand_mode = 1

[node name="CoinCount" type="Label" parent="HUD/CoinUI"]
offset_left = 104.0
offset_top = 32.0
offset_right = 184.0
offset_bottom = 96.0
text = "##"
label_settings = SubResource("LabelSettings_aixse")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverUI" type="Node2D" parent="HUD"]
visible = false

[node name="Panel" type="Panel" parent="HUD/GameOverUI"]
offset_right = 1280.0
offset_bottom = 720.0

[node name="GameOverText" type="Label" parent="HUD/GameOverUI/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -590.0
offset_top = -84.0
offset_right = 590.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "Uh Oh! Game Over..."
label_settings = SubResource("LabelSettings_7w7or")

[node name="TryAgain" type="Button" parent="HUD/GameOverUI/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -276.0
offset_right = 128.0
offset_bottom = -204.0
grow_horizontal = 2
grow_vertical = 0

[node name="TryAgainText" type="Label" parent="HUD/GameOverUI/Panel/TryAgain"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Try again?"
label_settings = SubResource("LabelSettings_ojw47")

[node name="CompleteUI" type="Node2D" parent="HUD"]
visible = false

[node name="Panel" type="Panel" parent="HUD/CompleteUI"]
offset_right = 1280.0
offset_bottom = 720.0

[node name="CompleteText" type="Label" parent="HUD/CompleteUI/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -590.0
offset_top = -168.0
offset_right = 590.0
offset_bottom = 168.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "Great Job!
Level Complete!"
label_settings = SubResource("LabelSettings_7w7or")
horizontal_alignment = 1

[node name="TryAgain" type="Button" parent="HUD/CompleteUI/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -208.0
offset_right = 128.0
offset_bottom = -136.0
grow_horizontal = 2
grow_vertical = 0

[node name="TryAgainText" type="Label" parent="HUD/CompleteUI/Panel/TryAgain"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Try again?"
label_settings = SubResource("LabelSettings_ojw47")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
follow_viewport_enabled = true

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground"]
offset_left = -128.0
offset_top = -680.0
offset_right = 3200.0
offset_bottom = 640.0
color = Color(0.815686, 0.956863, 0.968627, 1)

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.25, 0.25)

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
offset_left = -120.0
offset_top = -144.0
offset_right = 3208.0
offset_bottom = 880.0
texture = ExtResource("3_e1adr")
stretch_mode = 1

[node name="DemoPlayer" parent="." instance=ExtResource("4_gvo2c")]
position = Vector2(112, 536)

[node name="Camera2D" type="Camera2D" parent="DemoPlayer"]
limit_left = 0
limit_top = -128
limit_right = 3072
limit_bottom = 720

[node name="Coins" type="Node2D" parent="."]

[node name="Coin1" parent="Coins" instance=ExtResource("5_i3o0q")]
position = Vector2(2240, 160)

[node name="Coin2" parent="Coins" instance=ExtResource("5_i3o0q")]
position = Vector2(840, 160)

[node name="Coin3" parent="Coins" instance=ExtResource("5_i3o0q")]
position = Vector2(1536, 312)

[node name="Enemies" type="Node2D" parent="."]
position = Vector2(1920, 577)

[node name="Enemy1" parent="Enemies" instance=ExtResource("6_sh5v0")]
position = Vector2(464, -385)
speed = 200.0

[node name="Enemy2" parent="Enemies" instance=ExtResource("6_sh5v0")]
position = Vector2(-1080, -1)

[node name="Enemy3" parent="Enemies" instance=ExtResource("6_sh5v0")]
position = Vector2(-384, -257)

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("7_twyra")
cell_quadrant_size = 128
format = 2
layer_0/tile_data = PackedInt32Array(327680, 18, 0, 327681, 18, 0, 327682, 18, 0, 327683, 18, 0, 327684, 18, 0, 327685, 18, 0, 327686, 18, 0, 327687, 18, 0, 327688, 18, 0, 327695, 18, 0, 327696, 18, 0, 327697, 18, 0, 327698, 18, 0, 131078, 15, 0, 131077, 14, 0, 131079, 16, 0, 196620, 16, 0, 196619, 14, 0, 131088, 14, 0, 131089, 15, 0, 131090, 16, 0, 327689, 19, 0, 327694, 17, 0, 327699, 18, 0, 327700, 18, 0, 327701, 18, 0, 327703, 18, 0, 327702, 18, 0, 327704, 11, 0, 262168, 11, 0, 196632, 11, 0, 131096, 11, 0, 65560, 11, 0, 24, 11, 0, 393215, 11, 0, 327679, 11, 0, 262143, 11, 0, 196607, 11, 0, 131071, 11, 0, 65535, 11, 0)
metadata/_edit_lock_ = true

[node name="FallZone" type="Area2D" parent="."]
position = Vector2(1536, 776)

[node name="FallCol" type="CollisionShape2D" parent="FallZone"]
position = Vector2(0, 88)
shape = SubResource("RectangleShape2D_aye17")

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_djalf")
volume_db = -10.0
autoplay = true

[connection signal="pressed" from="HUD/GameOverUI/Panel/TryAgain" to="." method="_on_try_again_pressed"]
[connection signal="pressed" from="HUD/CompleteUI/Panel/TryAgain" to="." method="_on_try_again_pressed"]
[connection signal="coin_collected" from="Coins/Coin1" to="." method="_on_coin_collected"]
[connection signal="coin_collected" from="Coins/Coin1" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Coins/Coin2" to="." method="_on_coin_collected"]
[connection signal="coin_collected" from="Coins/Coin3" to="." method="_on_coin_collected"]
[connection signal="enemy_hit" from="Enemies/Enemy1" to="." method="_on_game_over"]
[connection signal="enemy_hit" from="Enemies/Enemy2" to="." method="_on_game_over"]
[connection signal="enemy_hit" from="Enemies/Enemy3" to="." method="_on_game_over"]
[connection signal="body_entered" from="FallZone" to="." method="_on_game_over"]
